--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -42,5 +43,65 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+    <!-- <nav class="navbar navbar-expand-lg custom-navbar fixed-top">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse navbar-items" id="navbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item active">
+                  <a class="nav-link" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/about">About</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/projects">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/entertainment">Entertainment</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+          </ul>
+      </div>
+  </nav> -->
+
   </body>
+  
+
+  <style>
+     html {
+    scroll-behavior: smooth;
+  }
+    .custom-navbar{
+      background-color: transparent;
+      
+    }
+    .navbar-items{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .navbar-nav .nav-item .nav-link {
+      color: rgb(138, 137, 137);
+      margin-left: 1rem;
+    }
+    .navbar-nav .nav-item .nav-link:hover {
+      color: rgb(0, 0, 0); /* Change this to your desired hover color */
+    }   
+    .navbar-nav .nav-item.active .nav-link {
+      color: black; /* Change this to your desired active link color */
+    }
+
+    li{
+      font-family: monospace;
+      font-size: 18px;
+      margin-left: 3rem;
+      font-weight: bolder;
+    }
+  </style>
+  
 </html>
